<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:id="@+id/motionLayout"
    app:layoutDescription="@xml/activity_main_scene">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="72dp"
        app:lottie_rawRes="@raw/editedramadankareem4"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:oneshot="true"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie1"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:lottie_rawRes="@raw/ramadan"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:oneshot="true"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie2"
            android:layout_width="match_parent"
            android:layout_height="750dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_rawRes="@raw/ramadan2021"
            android:layout_marginTop="120dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:oneshot="true"/>

<!--    </LinearLayout>-->
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="8dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/paddingMedium">

            <View
                android:layout_width="55dp"
                android:layout_height="4dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:gravity="center" />

            <TextView
                android:id="@+id/prayerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prayer_time"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity=""
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fajr"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/_4_40"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:layout_marginBottom="@dimen/marginSmall"
                    android:background="@color/white"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/zohr"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_12_05"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:layout_marginBottom="@dimen/marginSmall"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/asr"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_3_30"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                </LinearLayout>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:layout_marginBottom="@dimen/marginSmall"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/maghrib"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_6_05"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:layout_marginBottom="@dimen/marginSmall"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/eshaa"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_7_20"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mediumText" />

                </LinearLayout>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:layout_marginBottom="@dimen/marginSmall"
                    android:background="@color/white" />

            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:layout_marginTop="8dp">-->

            <!--                <TextView-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="Fajr"-->
            <!--                    android:textSize="16sp"/>-->

            <!--                <TextView-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="4:40"-->
            <!--                    android:textSize="16dp"/>-->

            <!--            </LinearLayout>-->
            <!--            -->

        </LinearLayout>

    </androidx.cardview.widget.CardView>

<!--    </LinearLayout>-->



</androidx.constraintlayout.motion.widget.MotionLayout>